--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "semantic-ui-react": "^0.88.0",
+    "sweetalert2": "^8.16.3"
   },
   "scripts": {
     "start": "react-scripts start",
